download videos from Yle servers
Copyright 2009-2017 Antti Ajanki
Distributed under the GPL v3

xx xxx 2018, Version 2.31

- Support the new live radio URLs. Drop the support for the old URLs.
- Download the HLS version of a live radio stream (like the Areena web app)
- Include subtitles when piping a video
- Don't restart and remove a partially downloaded file

19 Dec 2017, Version 2.30

- yle-dl now runs on Python 3.5 and 3.6 (as well as on Python 2.7 like before)

7 Dec 2017, Version 2.29

- New argument --resolution for selecting stream by vertical resolution
- Reduce repetition in output filenames
- Remove genre prefixes ("Elokuva:", "Kino:", etc.) from output filenames
- More streams now obey --proxy
- Avoid re-downloading subtitles on --resume
- Quicker check to see if a file has already been downloaded

19 Nov 2017, Version 2.28

- The wget downloader fails on some videos, use ffmpeg instead.
- Possibility to use libav instead of ffmpeg. See README.md.
- Fixed an issue with Unicode characters when a file has already been downloaded
- Avoid re-downloading on --resume when the file name contains a colon
- Show a warning if a download failure might be caused by a geo restriction

29 Oct 2017, Version 2.27

- --showmeta now prints the resolution for HDS streams
- Fixed --maxbitrate on HDS streams
- Don't redownload already downloaded files when using --resume (HDS streams).
  Requires ffmpeg and ffprobe.
- --duration now works on RTMP streams
- Warn if an output file extension is unsupported
- Fixed the timestamp of wget downloads

14 Oct 2017, Version 2.26

- Support wget older than 1.16
- Support older python-requests. Retry is disabled on old python-requests.
- Refuse to install on Python 3

9 Oct 2017, Version 2.25

- This version requires wget
- Retry failing downloads (HTML5 streams and stream metadata only)
- Support --resume on HTML5 streams
- Cancel stalled metadata downloads after a timeout
- Fallback to youtube-dl only when it is useful
