@@ -4,10 +4,12 @@ Distributed under the GPL v3
 
 xx xxx 2018, Version 2.31
 
+- Support the /tv/ohjelmat URLs
 - Support the new live radio URLs. Drop the support for the old URLs.
 - Download the HLS version of a live radio stream (like the Areena web app)
 - Include subtitles when piping a video
 - Don't restart and remove a partially downloaded file
+- Geo restrictions warning was some times shown unnecessary
 
 19 Dec 2017, Version 2.30
 
